# logos

./: .gitignore  Makefile  README.md  pyproject.toml
bootstrap/: logos_compile.c
examples/: 01_hello_facts.logos  02_voting_rules.logos  03_uncertain_location.logos  04_recommendation.logos  05_contexts.logos
logos/: __init__.py  __main__.py  ast_nodes.py  codegen.py  compile-main.logos  compiler.logos  compiler.py  confidence.py  context.py  errors.py  evaluator.logos  executor.py  grammar.lark  inference.py  interpret-main.logos  interpreter.logos  lexer.logos  lexer.py  parser.logos  parser.py  primitives.py  repl.py  semantic_graph.py  type_system.py
logos/runtime/: __init__.py  logos_lexer.c  logos_lexer.h  logos_meta.c  logos_meta.h  logos_primitives.c  (+3 more)
spec/: 00-overview.md  00_index.md  01-philosophy.md  01_language.md  02-lexical.md  02_primitives.md  03-ontological-types.md  03_stdlib.md  04-semantic-bindings.md  04_implementation.md  05-confidence-model.md  05_self_hosting.md  06-inference-rules.md  07-transforms.md  08-contexts.md  09-dependency-execution.md  10-queries.md  11-composition.md  12-stdlib-sketch.md
tests/: conftest.py  run_tests.sh  test_compiler.py  test_confidence.py  test_contexts.py  test_evaluator_logos.py  test_executor.py  test_imports.py  test_inference.py  test_lexer.py  test_lexer_logos.py  test_or_aggregation.py  test_parser.py  test_parser_logos.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_primitives.py  test_type_system.py  test_var_compare.py
(+25 files in other folders)
