[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logos-lang"
version = "0.1.0"
description = "Logos: an AI-native programming language"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1",
    "networkx>=3.0",
    "scipy>=1.11",
    "numpy>=1.24",
    "attrs>=23.0",
    "prompt_toolkit>=3.0",
    "Pygments>=2.16",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]

[project.scripts]
logos = "logos.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
